<resources>
    <string name="app_name">LightsOut</string>

    <string name="banner_ad">Banner Ad</string>
    <string name="interstitial_ad">Interstitial Ad</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="interstitial_load">Load Interstitial</string>
    <string name="interstitial_not_ready">Interstitial Not Ready</string>
    <string name="interstitial_loading">Loading Interstitial</string>
    <string name="interstitial_show">Show Interstitial</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="ad_test_device">Not Defined</string>

    <string name="lights_out_title">Lights Out!</string>
    <string name="play">Play</string>
    <string name="how_to_play">How to Play</string>
    <string name="about">About</string>

    <string name="moves">Moves:</string>
    <string name="time">Time:</string>
    <string name="level_name">Level:</string>
    <string name="home">Home</string>
    <string name="hint">Hint</string>
    <string name="reset">Reset</string>
    <string name="solve">Solve</string>

    <string name="level_dim_select">Level Select</string>
    <string name="level_select">Level Select</string>
    <string name="select_3x3">3x3</string>
    <string name="select_3x4">3x4</string>
    <string name="select_4x3">4x3</string>
    <string name="select_4x4">4x4</string>
    <string name="select_5x5">5x5</string>
    <string name="select_6x6">6x6</string>

    <string name="my_website">http://vprusso.github.io/</string>
    <string name="about_intro">Hey! Thanks for downloading my app.</string>
    <string name="about_paragraph">I am just one guy who does this for kicks on the weekends,
        and it has been a really fun project to work on! Feel free to reach out to me at the link
        below, and thanks again for downloading!</string>

    <string name="how_to_play_intro">Lights Out  is a puzzle game that was originally produced by
        Tiger Electronics in 1995. The game consists of a grid of squares. Each level in the game
        consists of some collection of squares in the grid that are either in the on or off
        state. For instance, we may consider the following level:</string>
    <string name="how_to_play_paragraph">where the red colored squares represent an on state and
        the white colored squares represent an off state. When one presses a square, this toggles
        the pressed square as well as the neighboring squares to flip to their opposite state.
        For instance, if we press the center square in the above example this toggles the square
        itself as well as the top, bottom, left, and right squares to toggle off.</string>
    <string name="how_to_play_ending">In this case, all squares are toggled in the off position.
        When all squares are in the off state, we refer to this as the winning condition of the
        game. The aim of the game is to turn all the lights out!</string>

</resources>
