<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.captainhampton.lightsout.MainActivity">

    <!--<ScrollView-->
        <!--android:id="@+id/scrollViewMainMenu"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scrollbars="vertical"-->
        <!--android:background="@drawable/gradient_background"-->
        <!--android:fillViewport="true">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">


        <TextView
            android:id="@+id/textViewLightsOutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/lights_out_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPlay"
            android:background="@drawable/gradient_background"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@+id/textViewLightsOutTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/play"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonHowToPlay"
            android:background="@drawable/gradient_background"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/how_to_play"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_below="@+id/buttonPlay"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp" />


        <Button
            android:id="@+id/buttonAbout"
            android:background="@drawable/gradient_background"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_below="@+id/buttonHowToPlay"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/mainAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
<!--</ScrollView>-->

</LinearLayout>
