<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayoutBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLevelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/level_name"
                android:layout_column="1"/>

            <TextView
                android:id="@+id/textViewLevelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_column="2"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/moves"
                android:layout_column="1"/>

            <TextView
                android:id="@+id/textViewNumMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_column="2"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_column="1"/>

            <Button
                android:id="@+id/buttonHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"/>

            <Button
                android:id="@+id/buttonSolve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solve"
                android:layout_column="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

</RelativeLayout>